cititechd/force-app/main/default/objects/Monday_com_Integration__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Corporate Access</fullName>
            </value>
            <value>
                <fullName>Corporate Services</fullName>
            </value>
            <value>
                <fullName>Event Marketing</fullName>
            </value>
            <value>
                <fullName>Global Banking</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Global Research</fullName>
            </value>
            <value>
                <fullName>Investor Relations</fullName>
            </value>
            <value>
                <fullName>Issuer Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>OETV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>