cititechd/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Showcase_Enhanced__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Showcase_Enhanced__c</fullName>
    <label>Number of Showcase Enhanced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>