cititechd/force-app/main/default/objects/Monday_com_Integration__c/fields/Technical_Virtual_Event_Support__c.field-meta.xml
<CustomField>
    <fullName>Technical_Virtual_Event_Support__c</fullName>
    <formula>TEXT( Order__r.Speaker_Ready_Support__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Virtual Event Support</label>
    <type>Text</type>
</CustomField>