cititechd/force-app/main/default/objects/Monday_com_Integration__c/validationRules/Original_Business_Line_Lockdown.validationRule-meta.xml
<ValidationRule>
    <fullName>Original_Business_Line_Lockdown</fullName>
    <active>true</active>
    <description>Once the Original Business Line is populated, one cannot edit or modify.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;API&quot;,
ISCHANGED(Original_Business_Line__c),
NOT(ISBLANK(Original_Business_Line__c)),
NOT(ISBLANK(PRIORVALUE(Original_Business_Line__c)))
)</errorConditionFormula>
    <errorDisplayField>Original_Business_Line__c</errorDisplayField>
    <errorMessage>Once the Original Business Line is populated, one cannot edit or modify.</errorMessage>
</ValidationRule>