cititechd/force-app/main/default/objects/Monday_com_Integration__c/validationRules/Total_Interactive_Mtgs_Per_Day_Above_25.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Interactive_Mtgs_Per_Day_Above_25</fullName>
    <active>true</active>
    <description>For OE Conferences, the total interactive meetings per day must be 25 or more as our Contracts currently state. If the value is below this threshold, interactive pricing must be at OE Connect. Any questions or concerns, please connect with Allen or Emilia</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;API&apos;,
Order__r.Start_Date_Time__c &gt; DATETIMEVALUE( &quot;2022-05-09 12:00:00&quot; ),
Business_Line__c = &apos;OE Conference&apos;,
NOT(ISPICKVAL(Order__r.Event_Type_OE_Defined__c, &quot;Streamlink&quot;)),
Interactive_Meetings_Avg_Per_Day__c &lt; 25,
Interactive_Meetings_Avg_Per_Day__c &gt; 0,
Order__r.Interactive_Meetings_Avg_Exception__c = FALSE,
NOT(ISPICKVAL(Order__r.Account_Legal_Entity__c, &quot;Veracast&quot;)),
OR(
ISPICKVAL(Order__r.Status, &quot;Delivered&quot;),
ISPICKVAL(Order__r.Status, &quot;Confirmed / On Hold&quot;),
ISPICKVAL(Order__r.Status, &quot;Client Confirmed&quot;)
))</errorConditionFormula>
    <errorMessage>For Conferences, the total interactive meetings per day must be 25 or more as our Contracts currently state. If the value is below this 25 threshold, interactive pricing must be at OE Connect. Otherwise please connect with Allen,Emilia, or Carmen Hartigan</errorMessage>
</ValidationRule>